--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
     function playerMove(event, object) {
         if (!isGameDone) {
-            var x = parseInt(object.id.charAt(0)); // chujowo troche
-            var y = parseInt(object.id.charAt(1)); // /\
+            var x = parseInt(object.id.charAt(0)); // zrobić z tego dwa atrybuty data-x oraz data-y
+            var y = parseInt(object.id.charAt(1)); // albo zrobić z tego jednego jsona id="{x:10,y:10}"
             var divToChange = bombsAndFlags[x][y].gameField;
 
             if (event.button == 0) {
