Extracted creating default object to getDefaultFieldObject()

--- a/index.html
+++ b/index.html
@@ -27,10 +27,15 @@
 
     function fillTwoDimensionalArray() {
         var array = [];
+
+        function getDefaultFieldObject() {
+            return {isBomb: false, isFlag: false, numberOfBombsAdjacent: 0, gameField: null};
+        }
+
         for (var i = 0; i < 9; i++) {
             array[i] = [];
             for (var j = 0; j < 9; j++) {
-                array[i][j] = {isBomb: false, isFlag: false, numberOfBombsAdjacent: 0, gameField: null}; // wjebalbym to w jakies getDefaultObjectYo
+                array[i][j] = getDefaultFieldObject();
             }
         }
         return array;
